--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Catherine Chen
 email: tche101@stanford.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Political psychologist studying American public opinion on science, vaccines, and climate change
+  Political psychologist studying American public opinion on science and technology
 url: "https://catherinechenty.com"
 # baseurl: "/about" # the subpath of your site, e.g. /blog
 # the base hostname & protocol for your site, e.g. http://example.com
