--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
  
 title: Catherine Chen
-email: tche101@stanford.edu
+email: catherinechen@lsu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Political psychologist studying American public opinion on science and technology
 url: "https://catherinechenty.com"
